fix: align fake editor to center

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -193,7 +193,6 @@ svg {
   padding-left: 3ch;
   position: relative;
   max-width: 40ch;
-  left: -1.6ch;
 }
 
 .fake-ed:before {
